close popups in Activity Areas, when click outside; fixed arrow twitching on mobiles; bigger font size in Activity Areas on mobiles; made scrollbar and padding in Activity Areas popups adaptive; smaller font size in Bio; bigger font size in Bottom Menu, smaller margins in Work Cases; fixed bug with footer text hiding

--- a/src/scss/AboutMe/ActivityAreas/ActivityAreas.module.scss
+++ b/src/scss/AboutMe/ActivityAreas/ActivityAreas.module.scss
@@ -25,6 +25,12 @@
           transition: color $medium-transition-dur ease-out;
         }
       }
+
+      @media (max-width: 550px) {
+        h3 {
+          font-size: calc(1vw + 0.8em);
+        }
+      }
     }
 
     .subArea {
@@ -42,6 +48,7 @@
 
         &::-webkit-scrollbar {
           width: 7px;
+          width: min(calc(1vw + 0.001em), 7px);
           border-radius: 100px;
         }
 
@@ -75,7 +82,8 @@
         color: $black;
         list-style: none;
         padding: 8px 8px 8px 20px;
-        font-size: calc(1vw + 0.4rem);
+        padding-left: min(calc(1vw + 0.5em) ,20px);
+        font-size: calc(1vw + 0.5rem);
       }
     }
 
